@@ -1,6 +1,7 @@
 2.4 - ?
 	- Release search + browser + filters
 	- Javascript date input
+	- Resolution field for release entries
 
 2.3 - 2009-04-01
 	- No page reload needed when changing rlist status from vn page
